package domain;

public interface InterfaceAnfibio {

	public int mostrarRuedas(int ruedas);

	public Double mostrarVelocidadTierra(Double velocidadTierra);

	public String mostrarAnfibio();

}
